--- a/bce-web-server/static/global.css
+++ b/bce-web-server/static/global.css
@@ -1,10 +1,10 @@
 body {
-    color: #777;
-    background: #eee;
+    color: #ffffff;
+    background: #000000;
     padding: 0;
     margin: 0;
 }
 
 p {
-    color: purple
+    color: #ffffff
 }
