--- a/bce-web-server/static/global.css
+++ b/bce-web-server/static/global.css
@@ -8,3 +8,12 @@ body {
 p {
     color: #ffffff
 }
+
+button {
+  background-color: #ffffff;
+  color: #000000;
+  border: none;
+  border-radius: 4px;
+  padding: 0.5rem;
+/*  text-transform: uppercase; */
+}
