--- a/bce-web-server/static/global.css
+++ b/bce-web-server/static/global.css
@@ -2,30 +2,30 @@
 
 /* Light Mode */
 :root[color-mode="light"] {
-  --surface1: #e6e6e6;
-  --surface2: #f2f2f2;
-  --surface3: #ffffff;
-  --element1: #111111;
-  --element2: #222222;
-  --element3: #333333;
-  --elementInverse: #eee;
-  --primary: #01408e;
-  --secondary: #3c5d5c;
-  --tertiary: #fff7d6;
+  --surface1: #ffffff;
+  --surface2: #eeeeee;
+  --surface3: #dddddd;
+  --element1: #000000;
+  --element2: #111111;
+  --element3: #222222;
+  --elementInverse: #ffffff;
+  --primary: #00ff00;
+  --secondary: #0000ff;
+  --tertiary: #ff00ff;
 }
 
 /* Dark Mode */
 :root[color-mode="dark"] {
-  --surface1: #262626;
-  --surface2: #333333;
-  --surface3: #404040;
-  --element1: #eeeeee;
-  --element2: #dddddd;
-  --element3: #cccccc;
-  --elementInverse: #111;
-  --primary: #8fceff;
-  --secondary: #72faca;
-  --tertiary: #eee8a9;
+  --surface1: #000000;
+  --surface2: #111111;
+  --surface3: #222222;
+  --element1: #ffffff;
+  --element2: #eeeeee;
+  --element3: #dddddd;
+  --elementInverse: #000000;
+  --primary: #00ff00;
+  --secondary: #0000ff;
+  --tertiary: #ff00ff;
 }
 
 body {
