--- a/bce-web-server/static/global.css
+++ b/bce-web-server/static/global.css
@@ -35,25 +35,15 @@ body {
   margin: 0;
 }
 
-/*
 p {
-  color: #ffffff
+  color: var(--element1)
 }
-*/
 
 button {
-/*
-  background-color: #ffffff;
-  color: #000000;
-*/
+  background-color: var(--surface2);
+  color: var(--element2);
   border: none;
   border-radius: 4px;
   padding: 0.5rem;
 }
 
-/*
-:global(body.dark-mode) button {
-  background-color: #00ff00;
-  color: #000000;
-}
-*/
