--- a/bce-web-server/static/global.css
+++ b/bce-web-server/static/global.css
@@ -39,6 +39,13 @@ p {
   color: var(--element1)
 }
 
+a {
+  link: var(--primary);
+  visited: var(--secondary);
+  active: var(--tertiary);
+  hover: var(--tertiary);
+}
+
 button {
   background-color: var(--element1);
   color: var(--elementInverse);
