--- a/bce-web-server/static/global.css
+++ b/bce-web-server/static/global.css
@@ -39,11 +39,20 @@ p {
   color: var(--element1)
 }
 
-a {
-  link: var(--primary);
-  visited: var(--secondary);
-  active: var(--tertiary);
-  hover: var(--tertiary);
+a:link {
+  color: var(--primary);
+}
+
+a:visited {
+  color: var(--secondary);
+}
+
+a:active {
+  color: var(--tertiary);
+}
+
+a:hover {
+  color: var(--tertiary);
 }
 
 button {
