--- a/bce-web-server/static/global.css
+++ b/bce-web-server/static/global.css
@@ -63,6 +63,6 @@ button {
   padding: 0.5rem;
 }
 
-input[type="text"], textarea {
+input[type="text"], input[type="email"], input[type="password"], textarea {
   background-color: var(--surface2);
 }
