--- a/bce-web-server/static/global.css
+++ b/bce-web-server/static/global.css
@@ -63,6 +63,11 @@ button {
   padding: 0.5rem;
 }
 
-input[type="text"], input[type="email"], input[type="password"], textarea {
+input[type=text], input[type=email], input[type=password], textarea {
+  background-color: var(--surface1);
+}
+
+input[type=text]:focus, input[type=email]:focus, input[type=password]:focus, textarea:focus {
   background-color: var(--surface2);
 }
+
