--- a/bce-web-server/static/global.css
+++ b/bce-web-server/static/global.css
@@ -9,9 +9,9 @@
   --element2: #111111;
   --element3: #222222;
   --elementInverse: #ffffff;
-  --primary: #00ff00;
-  --secondary: #0000ff;
-  --tertiary: #7f007f;
+  --primary: #007f00;
+  --secondary: #00007f;
+  --tertiary: #3f003f;
 }
 
 /* Dark Mode */
