--- a/bce-web-server/static/global.css
+++ b/bce-web-server/static/global.css
@@ -10,8 +10,8 @@
   --element3: #222222;
   --elementInverse: #ffffff;
   --primary: #007f00;
-  --secondary: #00007f;
-  --tertiary: #3f003f;
+  --secondary: #0000ff;
+  --tertiary: #7f007f;
 }
 
 /* Dark Mode */
