--- a/bce-web-server/static/global.css
+++ b/bce-web-server/static/global.css
@@ -63,12 +63,22 @@ button {
   padding: 0.5rem;
 }
 
-input[type=text], input[type=email], input[type=password], textarea {
+input[type=email] {
   background-color: var(--surface1);
   color: var(--element1)
 }
 
-input[type=text]:focus, input[type=email]:focus, input[type=password]:focus, textarea:focus {
+input[type=password] {
+  background-color: var(--surface1);
+  color: var(--element1)
+}
+
+input[type=email]:focus {
+  background-color: var(--surface2);
+  color: var(--element2)
+}
+
+input[type=password]:focus {
   background-color: var(--surface2);
   color: var(--element2)
 }
