--- a/bce-web-server/static/global.css
+++ b/bce-web-server/static/global.css
@@ -68,7 +68,7 @@ input[type=email] {
   color: var(--element1)
 }
 
-input[type=password] {
+input[type=email]:autofill {
   background-color: var(--surface1);
   color: var(--element1);
 }
@@ -76,6 +76,16 @@ input[type=password] {
 input[type=email]:focus {
   background-color: var(--surface2);
   color: var(--element2);
+}
+
+input[type=password] {
+  background-color: var(--surface1);
+  color: var(--element1);
+}
+
+input[type=password]:autofill {
+  background-color: var(--surface1);
+  color: var(--element1);
 }
 
 input[type=password]:focus {
