--- a/bce-web-server/static/global.css
+++ b/bce-web-server/static/global.css
@@ -63,33 +63,23 @@ button {
   padding: 0.5rem;
 }
 
+input:autofill {
+  background-color: var(--surface1);
+  color: var(--element1);
+}
+
+input:-webkit-autofill {
+  background-color: var(--surface1);
+  color: var(--element1);
+}
+
 input[type=email] {
   background-color: var(--surface1);
   color: var(--element1)
 }
 
-input[type=email]:autofill {
-  background-color: var(--surface1);
-  color: var(--element1);
-}
-
-input[type=email]:focus {
-  background-color: var(--surface2);
-  color: var(--element2);
-}
-
 input[type=password] {
   background-color: var(--surface1);
   color: var(--element1);
-}
-
-input[type=password]:autofill {
-  background-color: var(--surface1);
-  color: var(--element1);
-}
-
-input[type=password]:focus {
-  background-color: var(--surface2);
-  color: var(--element2);
 }
 
