--- a/bce-web-server/static/global.css
+++ b/bce-web-server/static/global.css
@@ -81,9 +81,23 @@ input[type=email] {
   border:1px solid var(--element1);
 }
 
+input[type=email]:focus:hover {
+  outline: none;
+  box-shadow: 0px 0px 5px var(--element1);
+  border:1px solid var(--element1);
+  border-radius:0;
+}
+
 input[type=password] {
   background-color: var(--surface1);
   color: var(--element1);
   border:1px solid var(--element1);
+}
+
+input[type=password]:focus:hover {
+  outline: none;
+  box-shadow: 0px 0px 5px var(--element1);
+  border:1px solid var(--element1);
+  border-radius:0;
 }
 
