--- a/bce-web-server/static/global.css
+++ b/bce-web-server/static/global.css
@@ -74,18 +74,10 @@ input:-webkit-autofill {
   color: var(--element1);
 }
 
-input[type=email] {
+input[type=text], input[type=email], input[type=password] {
   background-color: var(--surface1);
   color: var(--element1)
   background: var(--surface1);
-  border:1px solid var(--element1);
-  border-radius:4;
-  box-shadow: 0px 0px 4px var(--element1);
-}
-
-input[type=password] {
-  background-color: var(--surface1);
-  color: var(--element1);
   border:1px solid var(--element1);
   border-radius:4;
   box-shadow: 0px 0px 4px var(--element1);
