--- a/bce-web-server/static/global.css
+++ b/bce-web-server/static/global.css
@@ -96,3 +96,13 @@ select option {
   background: var(--surface1);
 }
 
+.skip-link {
+  position: absolute;
+  top: -3em;
+  color: var(--surface1);
+  background: var(--element1);
+}
+
+.skip-link:focus {
+  top: 0;
+}
