--- a/bce-web-server/static/global.css
+++ b/bce-web-server/static/global.css
@@ -60,6 +60,10 @@ ul.menu {
   list-style-type: none;
 /*  margin: 0;*/
 /*  padding: 0;*/
+/*  background: var(--surface2); */
+}
+
+li.menu {
   background: var(--surface2);
 }
 
