--- a/bce-web-server/static/global.css
+++ b/bce-web-server/static/global.css
@@ -69,7 +69,7 @@ div.menu_container {
 ul.menu {
   list-style-type: none;
 /*  margin: 0;*/
-  padding: 0;
+  padding: 8px;
   background: var(--surface2); 
   transition: background 2s;
 }
