--- a/bce-web-server/static/global.css
+++ b/bce-web-server/static/global.css
@@ -73,6 +73,9 @@ ul.menu {
   list-style-type: none;
 /*  margin: 0;*/
   padding-left: 32px;
+  padding-top: 0px;
+  padding-right: 0px;
+  padding-bottom: 0px;
   background: var(--surface2); 
   transition: background 2s;
 }
