--- a/bce-web-server/static/global.css
+++ b/bce-web-server/static/global.css
@@ -67,6 +67,7 @@ div.menu_container {
   padding-right: 32px;
   padding-bottom: 0px;
   background: var(--surface2); 
+  transition: background 2s;
 }
 
 ul.menu {
