--- a/bce-web-server/static/global.css
+++ b/bce-web-server/static/global.css
@@ -147,3 +147,18 @@ select option {
   position: absolute;
   top: 0;
 }
+
+img.asset_preview {
+  width: 256px;
+  height: 256px;
+  padding: 8px 0;
+  display: block;
+  margin: auto;
+}
+
+div.asset_preview {
+  display: inline-block;
+  background: #var(--surface2);
+  width: 272px;
+  height:272px;
+}
