--- a/bce-web-server/static/global.css
+++ b/bce-web-server/static/global.css
@@ -158,7 +158,7 @@ img.asset_preview {
 
 div.asset_preview {
   display: inline-block;
-  background: #var(--surface2);
+  background: var(--surface2);
   width: 272px;
   height:272px;
 }
