working on chat request

--- a/bce-web-server/static/global.css
+++ b/bce-web-server/static/global.css
@@ -110,7 +110,17 @@ input:-webkit-autofill {
   transition: background 2s;
 }
 
-input[type=text], input[type=textarea], input[type=email], input[type=password] {
+input[type=text], input[type=email], input[type=password] {
+  background-color: var(--surface1);
+  color: var(--element1)
+  background: var(--surface1);
+  border:1px solid var(--element1);
+  border-radius:4;
+  box-shadow: 0px 0px 4px var(--element1);
+  transition: background 2s;
+}
+
+textarea {
   background-color: var(--surface1);
   color: var(--element1)
   background: var(--surface1);
