--- a/bce-web-server/static/global.css
+++ b/bce-web-server/static/global.css
@@ -154,8 +154,10 @@ select option {
 }
 
 .alert {
-  position: absolute;
-  top: 0;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
 
 img.asset_preview {
