--- a/bce-web-server/static/global.css
+++ b/bce-web-server/static/global.css
@@ -161,7 +161,7 @@ select option {
     background: var(--surface2);
     background-color: var(--surface2);
     color: var(--element2);
-    text-align: right;
+    text-align: center;
     border:1px solid var(--surface3);
 }
 
